--- a/Tarea 05.ipynb
+++ b/Tarea 05.ipynb
@@ -2,9 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(150, 5)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -105,7 +112,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +121,21 @@
     "import pandas as pd\n",
     "link = \"https://raw.githubusercontent.com/plotly/datasets/master/iris-data.csv\"\n",
     "df = pd.read_csv(link)\n",
+    "print(df.shape)\n",
     "df.head()\n",
+    "\n",
+    "## Descripción del dataset\n",
+    "\n",
+    "\"\"\"\n",
+    "El dataset de la flor Iris contiene las siguientes columnas:\n",
+    "- `sepal_length`: Longitud del sépalo en centímetros.\n",
+    "- `sepal_width`: Ancho del sépalo en centímetros.\n",
+    "- `petal_length`: Longitud del pétalo en centímetros.\n",
+    "- `petal_width`: Ancho del pétalo en centímetros.\n",
+    "- `class`: Clase de la flor Iris (Iris-setosa, Iris-versicolor, Iris-virginica).\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
     "df.describe()\n"
    ]
   }
