Revisar valores nulos en el data set

--- a/Tarea 05.ipynb
+++ b/Tarea 05.ipynb
@@ -137,7 +137,10 @@
     "\"\"\"\n",
     "\n",
     "df.describe()\n",
-    "\n"
+    "\n",
+    "# Revisar valores nulos\n",
+    "\n",
+    "df.isnull().sum()\n"
    ]
   }
  ],
