Cuantas filas existen para cada clase de flor

--- a/Tarea 05.ipynb
+++ b/Tarea 05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -15,15 +15,14 @@
     {
      "data": {
       "text/plain": [
-       "sepal length    0\n",
-       "sepal width     0\n",
-       "petal length    0\n",
-       "petal width     0\n",
-       "class           0\n",
-       "dtype: int64"
+       "class\n",
+       "Iris-setosa        50\n",
+       "Iris-versicolor    50\n",
+       "Iris-virginica     50\n",
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +54,12 @@
     "\n",
     "# Estadísticas de cada columna numérica\n",
     "\n",
-    "df.describe()\n"
+    "df.describe()\n",
+    "\n",
+    "# Cuántas filas existen para cada clase de flor\n",
+    "\n",
+    "df['class'].value_counts()\n",
+    "\n"
    ]
   }
  ],
