--- a/Tarea 05.ipynb
+++ b/Tarea 05.ipynb
@@ -308,9 +308,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "class\n",
+       "Iris-setosa        50\n",
+       "Iris-versicolor    50\n",
+       "Iris-virginica     50\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Cuántas filas existen para cada clase de flor\n",
     "\n",
